# debug-comm

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codex/skills/debug-comm-dev/: SKILL.md
.codex/skills/debug-comm-dev/agents/: openai.yaml
.codex/skills/debug-comm-release/: SKILL.md
.codex/skills/debug-comm-release/agents/: openai.yaml
.github/actions/setup-tauri-env/: action.yml
.github/workflows/: release.yml
doc/: JS自动化脚本.json
scripts/: extract-intl.mjs
src/: App.css  App.tsx  appStore.ts  constants.ts  typings.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  receive_log.rs
src-tauri/src/step/: basestep.rs  disinputstep.rs  disoutputstep.rs  javascriptstep.rs  mod.rs  model.rs  readme.md  serialportstep.rs  tcpclientstep.rs  tcpserverstep.rs  workflow.rs
src/locales/: en-US.json  zh-CN.json
src/locales/messages/: App.json  pages__SelectWork.json  pages__flow__components__Header.json  pages__flow__components__StepList.json  pages__flow__components__StepPar.json  pages__flow__index.json  pages__work__components__DisInput.json  pages__work__components__DisOutput.json  pages__work__components__Header.json
src/models/: activeTab.ts  locale.ts  msgstore.ts  plan.md  workflow.ts  workrun.ts
src/pages/: RightContent.tsx  SelectWork.tsx
src/pages/flow/: index.css  index.tsx
src/pages/flow/components/: Header.tsx  StepFlow.tsx  StepList.tsx  StepPar.tsx
src/pages/work/: index.tsx
src/pages/work/components/: DisInput.tsx  DisOutput.tsx  Header.tsx
wwwroot/: BingSiteAuth.xml  baidu_verify_codeva-JFsEU7DieP.html  index.html  script.js  styles.css
