[package]
name = "debug-comm"
version = "0.1.0-alpha.6"
description = "Communication debugging"
authors = ["lipeng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "debug_com_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["full"] }
tauri-plugin-process = "2.3.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-updater = { version = "2.10.1", default-features = false, features = ["native-tls", "zip"] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-updater = { version = "2.10.1", default-features = false, features = ["rustls-tls", "zip"] }
